Sixtieth Release Added missing hyperlink headers to all pages navigability bettered
Signed-off-by: hbono2019 <D18129993@mytudublin.ie>

--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_delete.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_delete.html
@@ -35,13 +35,13 @@
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                         <ul class="nav navbar-nav menu_nav ml-auto">
                             <li class="nav-item"><a class="nav-link" href="{% url 'HotelsApp:index' %}">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="{% url 'HotelsAppCRUD:customer_index' %}"> Customer Menu</a></li>
-                            <li class="nav-item"><a class="nav-link" href="{% url 'HotelsAppCRUD:hotel_index' %}">Hotel Menu</a></li>
-                            <li class="nav-item"><a class="nav-link" href="{% url 'HotelsAppCRUD:room_index' %}">Room Menu</a></li>
-                            <li class="nav-item"><a class="nav-link" href="{% url 'HotelsAppCRUD:rooms_billing_index' %}">Room Billing Menu</a></li>
-                            <li class="nav-item"><a class="nav-link" href="{% url 'HotelsAppCRUD:rooms_charge_index' %}">Room Charge Menu</a></li>
-                            <li class="nav-item active"><a class="nav-link" href="{% url 'HotelsAppCRUD:rooms_reservation_index' %}">Room Reservation Menu</a></li>
-                            <li class="nav-item"><a class="nav-link" href="{% url 'HotelsAppCRUD:rooms_service_index' %}">Room Service Menu</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'HotelsAppCRUD:customer_index' %}"> Customer</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'HotelsAppCRUD:hotel_index' %}">Hotel</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'HotelsAppCRUD:room_index' %}">Room</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'HotelsAppCRUD:rooms_billing_index' %}">Room Billing</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'HotelsAppCRUD:rooms_charge_index' %}">Room Charge</a></li>
+                            <li class="nav-item active"><a class="nav-link" href="{% url 'HotelsAppCRUD:rooms_reservation_index' %}">Room Reservation </a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'HotelsAppCRUD:rooms_service_index' %}">Room Service</a></li>
                         </ul>
                     </div>
                 </nav>
