--- a/HotelsApp/templates/HotelsApp/accounts/logged_out.html
+++ b/HotelsApp/templates/HotelsApp/accounts/logged_out.html
@@ -20,6 +20,20 @@
     <title>Logout</title>
 </head>
 <body>
+       <!--================Breadcrumb Area =================-->
+        <section class="breadcrumb_area blog_banner_two">
+            <div class="overlay bg-parallax" data-stellar-ratio="0.8" data-stellar-vertical-offset="0" data-background=""></div>
+            <div class="container">
+                <div class="page-cover text-center">
+                    <h2 class="page-cover-tittle f_48">User Logout</h2>
+                    <ol class="breadcrumb">
+                         <li><a href="{% url 'HotelsApp:login_index' %}">Login</a></li>
+                         <li class="active">Logout</li>
+                    </ol>
+                </div>
+            </div>
+        </section>
+        <!--================Breadcrumb Area =================-->
 {% block content %}
   <script>
 
