--- a/HotelsApp/templates/HotelsApp/accounts/password_reset_complete.html
+++ b/HotelsApp/templates/HotelsApp/accounts/password_reset_complete.html
@@ -20,6 +20,20 @@
     <title>Password Reset Complete</title>
 </head>
 <body>
+       <!--================Breadcrumb Area =================-->
+        <section class="breadcrumb_area blog_banner_two">
+            <div class="overlay bg-parallax" data-stellar-ratio="0.8" data-stellar-vertical-offset="0" data-background=""></div>
+            <div class="container">
+                <div class="page-cover text-center">
+                    <h2 class="page-cover-tittle f_48">Password Reset Done</h2>
+                    <ol class="breadcrumb">
+                         <li><a href="{% url 'HotelsApp:login_index' %}">Login</a></li>
+                         <li class="active">Password Reset Done</li>
+                    </ol>
+                </div>
+            </div>
+        </section>
+        <!--================Breadcrumb Area =================-->
 {% block content %}
   <h1>The password has been changed!</h1>
   <p><a href="{% url 'login' %}">log in again?</a></p>
