--- a/HotelsApp/templates/HotelsApp/accounts/password_reset_done.html
+++ b/HotelsApp/templates/HotelsApp/accounts/password_reset_done.html
@@ -20,6 +20,20 @@
     <title>Password Reset Done</title>
 </head>
 <body>
+       <!--================Breadcrumb Area =================-->
+        <section class="breadcrumb_area blog_banner_two">
+            <div class="overlay bg-parallax" data-stellar-ratio="0.8" data-stellar-vertical-offset="0" data-background=""></div>
+            <div class="container">
+                <div class="page-cover text-center">
+                    <h2 class="page-cover-tittle f_48">Password Reset Done</h2>
+                    <ol class="breadcrumb">
+                       <li><a href="{% url 'HotelsApp:login_index' %}">Login</a></li>
+                       <li class="active">Password Reset Done</li>
+                    </ol>
+                </div>
+            </div>
+        </section>
+        <!--================Breadcrumb Area =================-->
 {% block content %}
   <p>We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder.</p>
 {% endblock %}
