--- a/HotelsApp/templates/HotelsApp/accounts/password_reset_email.html
+++ b/HotelsApp/templates/HotelsApp/accounts/password_reset_email.html
@@ -20,6 +20,20 @@
     <title>Password Reset Email</title>
 </head>
 <body>
+       <!--================Breadcrumb Area =================-->
+        <section class="breadcrumb_area blog_banner_two">
+            <div class="overlay bg-parallax" data-stellar-ratio="0.8" data-stellar-vertical-offset="0" data-background=""></div>
+            <div class="container">
+                <div class="page-cover text-center">
+                    <h2 class="page-cover-tittle f_48">Password Reset Email</h2>
+                    <ol class="breadcrumb">
+                        <li><a href="{% url 'HotelsApp:login_index' %}">Login</a></li>
+                        <li class="active">Password Reset Email</li>
+                    </ol>
+                </div>
+            </div>
+        </section>
+        <!--================Breadcrumb Area =================-->
 <p>Someone asked for password reset for email {{ email }}. Follow the link below:<br>
 {{ protocol}}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %} </p>
 </body>
