--- a/templates/contact.html
+++ b/templates/contact.html
@@ -44,7 +44,7 @@
                             <li class="nav-item active"><a class="nav-link" href="{% url 'HotelsApp:index' %}">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'HotelsApp:about' %}">About us</a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'HotelsApp:accommodation' %}">Accommodation</a></li>
-                            <li class="nav-item"><a class="nav-link" href="{% url 'HotelsApp:gallery' %}">Gallery</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'HotelsApp:gallery' %}">Getting Around</a></li>
                             <li class="nav-item submenu dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog</a>
                                 <ul class="dropdown-menu">
