--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_detail.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_detail.html
@@ -68,6 +68,7 @@
   <p><strong>Hotel Id:</strong> {{ roomreservation.hotel_id }}</p>
   <p><strong>Customer Id:</strong> {{ roomreservation.customer_id }}</p>
   <p><strong>Room Id:</strong> {{ roomreservation.room_id }}</p>
+  <p><strong>Reservation Description:</strong> {{ roomreservation.reservation_description }}</p>
   <p><strong>From Date:</strong> {{ roomreservation.from_date }}</p>
   <p><strong>To Date:</strong> {{ roomreservation.to_date }}</p>
   <p><strong>Payment No:</strong> {{ roomreservation.payment_no }}</p>
