--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_create.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_create.html
@@ -97,6 +97,9 @@
 	</div>
 	<div class="form-row">
 	  <div class="form-group col-md-6 mb-0">
+        {{ form.reservation_description|as_crispy_field }}
+      </div>
+	  <div class="form-group col-md-6 mb-0">
         {{ form.from_date|as_crispy_field }}
       </div>
       <div class="form-group col-md-6 mb-0">
