--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_public_list.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_public_list.html
@@ -76,6 +76,7 @@
            <th scope="col1">Hotel Id</th>
            <th scope="col2">Customer Id</th>
            <th scope="col3">Room Id</th>
+           <th scope="col4">Reservation Description</th>
            <th scope="col5">Reserved from Date</th>
            <th scope="col6">Reserved to Date</th>
            <th scope="col7">Number of Adults</th>
@@ -89,6 +90,7 @@
                <td>{{ reservation.hotel_id}}</td>
                <td>{{ reservation.customer_id}}</td>
                <td>{{ reservation.room_id}}</td>
+               <td>{{ reservation.reservation_description}}</td>
                <td>{{ reservation.from_date}}</td>
                <td>{{ reservation.to_date}}</td>
                <td>{{ reservation.number_of_adults}}</td>
