Sixty Sixth Release modified Zomato search API
Signed-off-by: hbono2019 <D18129993@mytudublin.ie>

--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -90,7 +90,7 @@
                        </div>
                        <div class="row">
                            <div class="col-md-6">
-				              <input id="getText" type="text" class="form-control" placeholder="Search for Restaurant">
+				              <input id="textRestaurantSearch" type="text" class="form-control" placeholder="Search for types of cuisine">
 				           </div>
                            <div class="col-md-4">
                              <button id = "restaurantSearch" class = "btn button_hover">Search</button>
@@ -209,16 +209,56 @@
           }
         });
       function showPosition(position) {
-                                        // x.innerHTML = "Latitude: " + position.coords.latitude +
-                                        // "<br>Longitude: " + position.coords.longitude;
-                                        select(position.coords.latitude,  position.coords.longitude);
-      }
-     //--------------------------------------------------SEARCH BY Latitude & Longitude-----------------------------------------
+                                       var cuisineType = document.getElementById("textRestaurantSearch").value;
+                                       if(cuisineType){    console.log("inside cuisine search"); console.log(cuisineType);
+                                                           select_by_name(position.coords.latitude,  position.coords.longitude, cuisineType);
+                                                      }
+                                       else{
+                                             select(position.coords.latitude,  position.coords.longitude);
+                                            }
+                                       }
+     //--------------------------------------------------SEARCH BY Latitude, Longitude or Cuisine -----------------------------------------
      function select(latitude,longitude) {
       var settings = {
         "async": true,
         "crossDomain": true,
         "url": "https://developers.zomato.com/api/v2.1/search?lat=" + latitude + "&lon=" + longitude + "&count=100",
+        "method": "GET",
+        "headers": {
+        "user-key": "5563b9e1e40f64d4437a1cf10e38cc68",
+        'Content-Type': 'application/x-www-form-urlencoded'
+         }
+      }
+      $.getJSON(settings, function(data) {
+      data = data.restaurants;
+      var html = "";
+      $.each(data, function(index, value) {
+           var x = data[index];
+               $.each(x, function(index, value) {
+                      var location = x.restaurant.location;
+                      var userRating = x.restaurant.user_rating;
+                      html += "<div class='data img-rounded'>";
+                      html += "<div class='rating'>";
+                      html += "<span title='" + userRating.rating_text + "'><p style='color:white;background-color:#" + userRating.rating_color + ";border-radius:4px;border:none;padding:2px 10px 2px 10px;text-align: center;text-decoration:none;display:inline-block;font-size:16px;float:right;'><strong>" + userRating.aggregate_rating + "</strong></p></span><br>";
+                      html += "  <strong class='text-info'>" + userRating.votes + " votes</strong>";
+                      html += "</div>";
+                      html += "<img class='resimg img-rounded' src=" + value.thumb + " alt='Restaurant Image' height='185' width='185'>";
+                      html += "<a href=" + value.url + " target='_blank' class='action_link'><h2 style='color:red;'><strong>" + value.name + "</strong></h2></a>";
+                      html += "  <strong class='text-primary'>" + location.locality + "</strong><br>";
+                      html += "  <h6 style='color:grey;'><strong>" + location.address + "</strong></h6><hr>";
+                      html += "  <strong>CUISINES</strong>: " + value.cuisines + "<br>";
+                      html += "  <strong>COST FOR TWO</strong>: " + value.currency + value.average_cost_for_two + "<br>";
+                      html += "</div><br>";
+               });
+       });
+      $(".restaurant").html(html);
+      });
+     }
+     function select_by_name(latitude, longitude, cuisineType) {
+      var settings = {
+        "async": true,
+        "crossDomain": true,
+        "url": "https://developers.zomato.com/api/v2.1/search?lat=" + latitude + "&lon=" + longitude + "&cuisines=" + cuisineType + "&count=100",
         "method": "GET",
         "headers": {
         "user-key": "5563b9e1e40f64d4437a1cf10e38cc68",
