--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/index_pub.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/index_pub.html
@@ -79,6 +79,10 @@
       <th scope="row">Room Reservation Menu</th>
       <td> <a href="{% url 'HotelsAppCRUD:rooms_reservation_public_list' %}"> Rooms Reservation List</a> </td>
     </tr>
+    <tr>
+      <th scope="row">Room Reservation Lookup Menu</th>
+      <td> <a href="{% url 'HotelsAppCRUD:rooms_reservation_lookup_list' %}"> Rooms Reservation Lookup</a> </td>
+    </tr>
   </tbody>
 </table>
 </div>
