--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_lookup_detail.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_lookup_detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         {% load static %}
         <link rel="icon" href="{% static 'image/favicon.png' %}" type="image/png">
         <title>Royal Hotel</title>
@@ -17,7 +17,7 @@
         <!-- main css -->
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
         <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
-    <title>Room Reservation Index</title>
+    <title>Room Reservation Detail</title>
 </head>
 <body>
       <!--================Header Area =================-->
@@ -53,40 +53,72 @@
             <div class="overlay bg-parallax" data-stellar-ratio="0.8" data-stellar-vertical-offset="0" data-background=""></div>
             <div class="container">
                 <div class="page-cover text-center">
-                    <h2 class="page-cover-tittle f_48">Hotels Application Maintenance Database</h2>
+                    <h2 class="page-cover-tittle f_48">Royal Hotel Room Booking</h2>
                     <ol class="breadcrumb">
                         <li><a href="{% url 'HotelsAppCRUD:rooms_reservation_index' %}">Home</a></li>
-                        <li class="active">Room Reservation Index</li>
+                        <li class="active">Room Reservation Detail</li>
                     </ol>
                 </div>
             </div>
         </section>
         <!--================Breadcrumb Area =================-->
+{% block content %}
 <div class="container-fluid">
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th scope="col1">Choose option</th>
-      <th scope="col2"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">Room Reservation Menu</th>
-      <td> <a href="{% url 'HotelsAppCRUD:rooms_reservation_create' %}"> Rooms Reservation Create</a> </td>
-    </tr>
-    <tr>
-      <th scope="row">Room Reservation Menu</th>
-      <td> <a href="{% url 'HotelsAppCRUD:rooms_reservation_list' %}"> Rooms Reservation List</a> </td>
-    </tr>
-    <tr>
-      <th scope="row">Room Reservation Lookup Menu</th>
-      <td> <a href="{% url 'HotelsAppCRUD:rooms_reservation_lookup_list' %}"> Rooms Reservation Lookup</a> </td>
-    </tr>
-  </tbody>
-</table>
+   <div class="table-responsive">
+    <table class="table table-hover">
+      <thead>
+         <tr>
+           <th scope="col1">Hotel Name</th>
+           <th scope="col2">Star Rating</th>
+           <th scope="col3">County</th>
+           <th scope="col4">Name</th>
+           <th scope="col5">Credit Card No</th>
+           <th scope="col6">Phone Number</th>
+           <th scope="col7">Email</th>
+           <th scope="col8">Room Number</th>
+           <th scope="col9">Room Type</th>
+           <th scope="col10">Type</th>
+           <th scope="col11">No of Beds</th>
+           <th scope="col12">Max Occupancy</th>
+           <th scope="col13">Cost Per Night</th>
+           <th scope="col14">Reservation Id</th>
+           <th scope="col15">Reservation Desc</th>
+           <th scope="col16">Reserved from Date</th>
+           <th scope="col17">Reserved to Date</th>
+           <th scope="col18">No of Adults</th>
+           <th scope="col19">No of children</th>
+           <th scope="col20">Payment No</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+               <td>{{ roomreservationview.hotel.0.name}}</td>
+               <td>{{ roomreservationview.hotel.0.star_rating}}</td>
+               <td>{{ roomreservationview.hotel.0.county}}</td>
+               <td>{{ roomreservationview.customer.0.name}}</td>
+               <td>{{ roomreservationview.customer.0.credit_card_no}}</td>
+               <td>{{ roomreservationview.customer.0.phone_number}}</td>
+               <td>{{ roomreservationview.customer.0.email}}</td>
+               <td>{{ roomreservationview.room.0.room_number}}</td>
+               <td>{{ roomreservationview.room.0.room_type}}</td>
+               <td>{{ roomreservationview.room.0.type}}</td>
+               <td>{{ roomreservationview.room.0.beds}}</td>
+               <td>{{ roomreservationview.room.0.max_occupancy}}</td>
+               <td>{{ roomreservationview.room.0.cost_per_night}}</td>
+               <td>{{ roomreservationview.reservation_id}}</td>
+               <td>{{ roomreservationview.reservation_description}}</td>
+               <td>{{ roomreservationview.from_date}}</td>
+               <td>{{ roomreservationview.to_date}}</td>
+               <td>{{ roomreservationview.number_of_adults}}</td>
+               <td>{{ roomreservationview.number_of_children}}</td>
+               <td>{{ roomreservationview.payment_no}}</td>
+        </tr>
+      </tbody>
+    </table>
+   </div>
 </div>
-        <!--================ start footer Area  =================-->
+{% endblock %}
+       <!--================ start footer Area  =================-->
         <footer class="footer-area section_gap">
             <div class="container">
                 <div class="row">
