--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_lookup_detail.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/room_reservation_lookup_detail.html
@@ -56,7 +56,7 @@
                     <h2 class="page-cover-tittle f_48">Royal Hotel Room Booking</h2>
                     <ol class="breadcrumb">
                         <li><a href="{% url 'HotelsAppCRUD:rooms_reservation_index' %}">Home</a></li>
-                        <li class="active">Room Reservation Detail</li>
+                        <li class="active">Room Reservation Lookup Detail</li>
                     </ol>
                 </div>
             </div>
