--- a/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/index_pub.html
+++ b/HotelsAppCRUD/templates/HotelsAppCRUD/Reservation/index_pub.html
@@ -81,7 +81,7 @@
     </tr>
     <tr>
       <th scope="row">Room Reservation Lookup Menu</th>
-      <td> <a href="{% url 'HotelsAppCRUD:rooms_reservation_lookup_list' %}"> Rooms Reservation Lookup</a> </td>
+      <td> <a href="{% url 'HotelsAppCRUD:rooms_reservation_lookup_list' %}"> Rooms Reservation Lookup List</a> </td>
     </tr>
   </tbody>
 </table>
